--- a/Rest-Front/src/app/pages/view-product/view-product.component.html
+++ b/Rest-Front/src/app/pages/view-product/view-product.component.html
@@ -6,11 +6,11 @@
                 <tbody>
                     <tr>
                         <td style="padding-right: 40px;">Name:</td>
-                        <td>{{ product_details.name }}</td>
+                        <td>{{productName}}</td>
                     </tr>
                     <tr>
                         <td>Price:</td>
-                        <td>{{ product_details.price }}</td>
+                        <td>{{productPrice}}</td>
                     </tr>
                 </tbody>
             </table><br><br>
